--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,30 @@
 language: groovy
-sudo: false
 jdk:
 - oraclejdk7
-
 branches:
-  only:
-  - master
-
+  except:
+  - trunk
 before_install:
-- export TZ=Australia/Canberra
-- date
 - rm -rf ~/.gvm
 - curl -s get.gvmtool.net > ~/install_gvm.sh
 - chmod 775 ~/install_gvm.sh
 - ~/install_gvm.sh
 - echo "gvm_auto_answer=true" > ~/.gvm/etc/config
 - source ~/.gvm/bin/gvm-init.sh
-- GRAILS_VERSION=`grep '^\s*app.grails.version' application.properties | sed -e 's/^\s*app\.grails\.version=//g' | tr -d "\r"`
-- echo "GRAILS_VERSION:$GRAILS_VERSION"
+- GRAILS_VERSION=`grep '^app\.grails\.version=' ./fieldcapture-hubs-plugin/application.properties | sed -e
+  's/^app\.grails\.version=//g'`
 - gvm install grails $GRAILS_VERSION || true
-
 before_script:
-- GRAILS_VERSION_NUMBER=`echo $GRAILS_VERSION | sed -e 's/\.[0-9]*$//g' -e 's/\.//g' | tr -d "\r"`
-- echo "GRAILS_VERSION_NUMBER:$GRAILS_VERSION_NUMBER"
-- GRAILS_SETTINGS_FILE="travis_grails_settings_new.groovy"
-- if [ "$GRAILS_VERSION_NUMBER" -lt "23" ]; then GRAILS_SETTINGS_FILE="travis_grails_settings_old.groovy"; fi;
-- echo "GRAILS_SETTINGS_FILE:$GRAILS_SETTINGS_FILE"
-- mkdir -p ~/.grails; wget -q -O ~/.grails/settings.groovy https://raw.githubusercontent.com/AtlasOfLivingAustralia/travis-build-configuration/master/$GRAILS_SETTINGS_FILE
-- MAVEN_REPO="ala-repo-snapshot"
-- grep '^\s*app\.version=' ./application.properties | grep -q "\-SNAPSHOT"; if [ "$?" = "1" ]; then MAVEN_REPO="ala-repo-release"; fi;
-- echo "MAVEN_REPO:$MAVEN_REPO"
+- mkdir -p ~/.grails; wget -q -O ~/.grails/settings.groovy https://raw.githubusercontent.com/AtlasOfLivingAustralia/travis-build-configuration/master/travis_grails_settings_new.groovy
 
-script:
-- grails clean && grails refresh-dependencies --non-interactive && grails prod war --non-interactive && grails prod maven-install --non-interactive
-
-after_success: '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && grails prod maven-deploy --repository=$MAVEN_REPO --non-interactive'
-
+script: 
+  - cd fieldcapture-hubs-plugin; 
+  - MAVEN_REPO="ala-repo-snapshot"; grep 'def version =' ./FieldcapturePluginGrailsPlugin.groovy | grep -q "\-SNAPSHOT"; if [ "$?" = "1" ]; then MAVEN_REPO="ala-repo-release"; fi;
+  - grails clean; grails refresh-dependencies && grails prod maven-deploy --repository=$MAVEN_REPO --non-interactive
+  - cd ../fieldcapture-hub; 
+  - MAVEN_REPO="ala-repo-snapshot"; grep '^app\.version=' ./application.properties | grep -q "\-SNAPSHOT"; if [ "$?" = "1" ]; then MAVEN_REPO="ala-repo-release"; fi;
+  - grails clean; grails refresh-dependencies --non-interactive; grails prod war --non-interactive && grails prod maven-deploy --repository=$MAVEN_REPO --non-interactive
 env:
   global:
-  - secure: RIhAEjfKDzlXrqrTAHgC7wg+FODTmEq2AyWVzYYt2P46YHHdClBbVf5o1MhfhbQfn2E7yTSOXnZaP4KGhhotMHsqSxg9Ys42Nq4KXp/CXYfVPbw0MneKIv8Y4pgkAOhz1wBcDSTSHgO9oijfANAnI37V391tqvSrL9NiJfbLZLA=
-  - secure: zAD+0aRjyOPpUWcY0g8Dl0Gy74mZd5JbCGpfz9DbkN1wZhLisrG5ooHkNVSxaVR/DJChLHBL61cpj5TNu5BZAyY850wbHyCHfJJF3cbqUJu8dBtvGLUJPEXdsPyHUxtNQEgk5DiNbeuUiGxwzkDcpiIRYGWcY3GSWF31SGnJyhU=
+  - secure: enbmAS6MFwP5f/94ZK8UHbGu0uJtdKNGr1HJsVTCa2Nfv5P3zXRkbmW2kKsvV7AXROUOz7+GAkNYzWbb1NApLkNcjwq5Dptip20uYfYCXqgVw76S2ddubpsOWoBgGETpSCO0zi6YnBwzdc1aY5+IP8UKgY34sHjgppNfe39UUmQ=
+  - secure: OU/lhyGMduFcAtC/YHs/bCdEzH4wI9JYCwfU5dt/BLueP60Em7LcG3nbSFyCb2oK4eHTDdEHiSyMOsbrQ0wrs6zLitjUcNZIR9/gi6wKIGNli65xlevTbmFE59TXiNbbaMfccidJTehJCE+8N8X6QR3nXFKIReRMYimaAz58KWU=
