- Refactoring and changes made to enable the javascript tests to be run using Intellij Karma plugin and on Travis CI - Removed the Karma jUnit test runner because it is very slow

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,9 @@
 /target
 
 *.iml
-
-/.idea
+.idea/
 /fieldcapture-hub/target
+/fieldcapture-hub/out
+/fieldcapture-hub/logs
 
+/fieldcapture-hubs-plugin/node_modules
