--- a/fieldcapture-hubs-plugin/package.json
+++ b/fieldcapture-hubs-plugin/package.json
@@ -6,19 +6,23 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "jquery": "1.11.0",
     "karma": "^0.12.32",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.4.2",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.0",
-    "karma-chrome-launcher": "^0.1.12",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-jquery": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-remote-reporter": "^0.2.0"
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-remote-reporter": "^0.2.0",
+    "phantomjs": "^1.9.17",
+    "remote": "^0.2.6"
   },
   "scripts": {
-    "test": "karma start test/unit/javascript/karama.config.js"
+    "test": "karma start karma.ci.conf.js"
   },
   "author": "",
   "license": ""
