--- a/fieldcapture-hubs-plugin/package.json
+++ b/fieldcapture-hubs-plugin/package.json
@@ -22,7 +22,7 @@
     "remote": "^0.2.6"
   },
   "scripts": {
-    "test": "karma start karma.ci.conf.js"
+    "test": "karma start karma.conf.js"
   },
   "author": "",
   "license": ""
