--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ jdk:
 node_js:
   - "0.10"
 branches:
-  except:
-  - trunk
+  only:
+  - master
+  - dev
+  - 2.0
 before_install:
 - rm -rf ~/.gvm
 - curl -s get.gvmtool.net > ~/install_gvm.sh
